# wyoloservice

./: README.md  README_template.md  docker-compose.yml  examples_readme.py  publish_version.py  pyproject.toml  requirements.txt  setup.py
enviroment/: .gitkeep  Dockerfile.mlflow  artifacts_valid.py
examples/api_train/: config_train.yaml  yolo_train.py
examples/dataset/: people.py
examples/module/: .gitkeep
module/submodule/: __init__.py  controller.py
services/: Dockerfile  app.code-workspace  config.yaml  evaluate.py  requirements.txt  worker copy.py  worker.py
services/api/: __init__.py  database.py  main.py  minio.py  mlflow_tracking.py  redis_queue.py
services/worker_utils/: __init__.py  decorators.py  minio.py  train_yolo.py
tmp/config_versions/: abc123.yaml  config.yaml
tmp/database/: mlflow.db
tmp/datasets/: start_enviroment.sh
tmp/datasets/clasificacion/colorball.v8i.multiclass/: config_train.yaml
tmp/datasets/deteccion/Deteksi komponen elektronik.v1i.yolov8/: config_train.yaml  data.yaml  yolo_valid.py
tmp/datasets/deteccion/Deteksi komponen elektronik.v1i.yolov8/train/: labels.cache
tmp/datasets/deteccion/Deteksi komponen elektronik.v1i.yolov8/valid/: labels.cache
tmp/datasets/segmentacion/ArchitecturePlan.v4i.yolov8/: README.dataset.txt  README.roboflow.txt  config_train.yaml  data.yaml
tmp/datasets/segmentacion/ArchitecturePlan.v4i.yolov8/test/labels/: Retail_14_png.rf.200af814a0d558fdc8a93c26b9e6e8d2.txt  Retail_3_png.rf.6aefd0f64f2c7a19d669fd6672ad012f.txt  Retail_4_png.rf.c9453170dd4ded59758dbc4b691693ee.txt  (+9 more)
(+91 files in other folders)
